--- a/02_back/gin/Dockerfile
+++ b/02_back/gin/Dockerfile
@@ -4,4 +4,6 @@ WORKDIR /app
 
 COPY . .
 
-CMD ["go", "run", "main.go"]
+RUN go install github.com/air-verse/air@latest
+
+CMD ["air", "-c", ".air.toml"]
