--- a/02_back/gin/Dockerfile
+++ b/02_back/gin/Dockerfile
@@ -7,3 +7,7 @@ COPY . .
 RUN go install github.com/air-verse/air@latest
 
 CMD ["air", "-c", ".air.toml"]
+
+# RUN go build -o ./tmp/main main.go
+
+# CMD ["go", "build", "-o", "./tmp/main", "main.go", "&&", "./tmp/main"]
