--- a/02_back/gin/compose.yml
+++ b/02_back/gin/compose.yml
@@ -1,10 +1,31 @@
 services:
   app:
-    build: .
-    volumes:
-      - ./:/app
+    build:
+      context: .
+      dockerfile: ./z_main.Dockerfile
+    # volumes:
+    #   - ./:/app
     ports:
       - 8080:8080
+    develop:
+      watch:
+        - action: sync
+          path: ../gin
+          target: /app
+          ignore: 
+            - tmp/
+            - test/
+  
+  test:
+    build:
+      context: .
+      dockerfile: ./z_test.Dockerfile
+    volumes:
+      - ./:/test
+    ports:
+      - 5050:8080
+    depends_on:
+      - db
   
   db:
     image: postgres:latest
